--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -98,7 +98,7 @@ header img {
 	text-decoration: none;
 	font-size: 15px;
 	padding-left: 40px;
-	padding-right: 40px;l
+	padding-right: 40px;
 }
 
 header img {
@@ -143,13 +143,17 @@ div {
 }
 
 .middle-img {
-	width: 1200px;
+	width: 1000px;
 	height: 150px;
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
 
-.contact {
+body {
+	margin: 30px;
+}
+
+.contact h2 {
 	margin: 10px;
 }
 
@@ -160,4 +164,5 @@ div {
 
 footer {
 	text-align: center;
+	margin: 10px;
 }
